--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <div class="card">
-        <h1>Hello World!</h1>
-    </div>
+   <main>
+       <div class="main_inner">
+           <div class="info">
+                Choose a mode
+           </div>
+           <div class="control">
+               <div class="control_button disabled">
+                    <i class="fas fa-stream"></i>
+                    <p>All voices</p>
+               </div>
+               <div class="control_button disabled">
+                   <i class="fas fa-microphone"></i>
+                   <p>Microphone</p>
+               </div>
+               <div class="control_button disabled">
+                   <i class="fas fa-headset"></i>
+                   <p>Stream</p>
+               </div>
+           </div>
+       </div>
+   </main>
 </body>
 </html>
