--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
                    <i class="fas fa-microphone"></i>
                    <p>Microphone</p>
                </div>
+               <div class="control_button pause">
+                    <i class="far fa-stop-circle"></i>
+                    <p>Stop</p>
+                </div>
                <div class="control_button disabled">
                    <i class="fas fa-headset"></i>
                    <p>Stream</p>
