--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
-    <title>Document</title>
+    <title>SpeakerApp</title>
 </head>
 <body>
    <main>
@@ -21,7 +21,7 @@
                    <i class="fas fa-microphone"></i>
                    <p>Microphone</p>
                </div>
-               <div class="control_button pause">
+               <div class="control_button pause hidden">
                     <i class="far fa-stop-circle"></i>
                     <p>Stop</p>
                 </div>
